--- a/testsuite/tests/array-functions/BUILD.bazel
+++ b/testsuite/tests/array-functions/BUILD.bazel
@@ -1,24 +1,23 @@
-## GENERATED FILE ##
-
 load("//bzl:rules.bzl",
-     "ocaml_library",
-     "ocaml_module",
+     "test_library",
+     "test_module",
 )
 
 MODULE_OPTS = ["-nostdlib"]
 
-ocaml_library(
-    name = "testsuite_tests_array-functions_lib",
-    modules  = [
-        ":Test",
-    ],
-)
+# ocaml_library(
+#     name = "testsuite_tests_array-functions_lib",
+#     modules  = [
+#         ":Test",
+#     ],
+# )
 
-ocaml_module(
+test_module(
     name   = "Test",
     struct = "test.ml",
     opts = MODULE_OPTS,
     deps   = [
+        "//stdlib:Stdlib.Array"
     ]
 )
 
