--- a/WORKSPACE.bazel
+++ b/WORKSPACE.bazel
@@ -1,7 +1,4 @@
-workspace(name = "ocaml_tools")
-
-## DO NOT DO THIS: workspace(name = "ocaml")
-## (the obazl ruleset already defines @ocaml)
+workspace(name = "ocamlcc")
 
 load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")
 load("@bazel_tools//tools/build_defs/repo:git.bzl", "git_repository")
