--- a/config/BUILD.bazel
+++ b/config/BUILD.bazel
@@ -23,6 +23,7 @@ compiler_signature(
     src  = "config.mli",
     deps   = ["//stdlib:Stdlib_cmi"],
     visibility = [
+        "//ocamltest:__pkg__",
         "//otherlibs/dynlink:__pkg__",
         "//utils:__pkg__",
     ]
@@ -49,6 +50,7 @@ compiler_module(
         "//file_formats:__pkg__",
         "//lambda:__pkg__",
         "//middle_end:__subpackages__",
+        "//ocamltest:__pkg__",
         "//otherlibs/dynlink:__pkg__",
         "//parsing:__pkg__",
         "//tools:__pkg__",
