--- a/file_formats/BUILD.bazel
+++ b/file_formats/BUILD.bazel
@@ -100,6 +100,7 @@ compiler_signature(
     ],
     visibility = [
         "//bytecomp:__pkg__",
+        "//ocamltest:__pkg__",
         "//otherlibs/dynlink:__pkg__",
         "//tools:__pkg__",
         "//toplevel:__pkg__",
