--- a/parsing/BUILD.bazel
+++ b/parsing/BUILD.bazel
@@ -482,6 +482,7 @@ compiler_module(
         "//file_formats:__pkg__",
         "//lambda:__pkg__",
         "//middle_end:__subpackages__",
+        "//ocamltest:__pkg__",
         "//otherlibs/dynlink:__pkg__",
         "//tools:__pkg__",
         "//toplevel:__subpackages__",
@@ -505,6 +506,7 @@ compiler_signature(
         "//bytecomp:__pkg__",
         "//file_formats:__pkg__",
         "//lambda:__pkg__",
+        "//ocamltest:__pkg__",
         "//toplevel:__subpackages__",
         "//typing:__pkg__",
 
