--- a/testsuite/tools/BUILD.bazel
+++ b/testsuite/tools/BUILD.bazel
@@ -1,4 +1,5 @@
 load("//bzl:rules.bzl",
+     "ocaml_tool",
      "test_archive",
      "test_executable",
      "test_library",
@@ -31,15 +32,15 @@ test_library(
 # expect_LIBS := $(addprefix $(COMPILERLIBSDIR)/,\
 #   ocamlcommon ocamlbytecomp ocamltoplevel)
 
-test_executable(
-    name = "expect",
+ocaml_tool(
+    name = "inline_expect",
     prologue = [
         "//compilerlibs:ocamlcommon",
         "//bytecomp:ocamlbytecomp",
         "//toplevel:ocamltoplevel"
-        # "//toplevel:Toploop",
     ],
-    main = ":Expect_test"
+    main = ":Expect_test",
+    visibility = ["//testsuite:__subpackages__"]
 )
 
 ################
@@ -61,9 +62,8 @@ test_executable(
         ":Parsecmmaux",
         ":Parsecmm",
         ":Lexcmm",
-        ":Codegen_main"
     ],
-    main = ":Expect_test"
+    main = ":Codegen_main"
 )
 
 
@@ -84,6 +84,7 @@ test_module(
         "//stdlib:Stdlib.Parsing",
         "//stdlib:Stdlib.Printf",
         "//utils:Clflags",
+        ":Lexcmm",
         ":Parsecmm"
     ]
 )
