--- a/config/camlheaders/BUILD.bazel
+++ b/config/camlheaders/BUILD.bazel
@@ -10,6 +10,7 @@ camlheaders(
         "//lex:__pkg__",
         "//ocamltest:__pkg__",
         "//testsuite:__subpackages__",
-        "//toolchain/adapter:__pkg__"
+        "//toolchain/adapter:__pkg__",
+        "//tools:__pkg__"
     ]
 )
