ocamltoplevel: add missing module

--- a/toplevel/BUILD.bazel
+++ b/toplevel/BUILD.bazel
@@ -102,6 +102,7 @@ boot_library(
         ":Expunge",
         ":Genprintval",
         ":Topcommon",
+        ":Topprinters",
         ":Topdirs",
         ":Toploop",
         ":Topstart",
@@ -137,6 +138,7 @@ TOPLEVEL = [
     ":Trace",
     ":Genprintval",
     ":Topcommon",
+    ":Topprinters",
     ":Topdirs",
     ":Toploop",
 ]
